--- a/app/src/main/develop/AndroidManifest.xml
+++ b/app/src/main/develop/AndroidManifest.xml
@@ -17,16 +17,16 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/logo_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SmarterClean"
         android:usesCleartextTraffic="true"
         android:requestLegacyExternalStorage="true"
         tools:targetApi="31">
 
-        <!--<activity android:name="com.cozs.qrcode.module.activity.GuideActivity"
+        <activity android:name="com.cozs.qrcode.module.activity.GuideActivity"
             android:exported="true"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
             android:launchMode="singleTask"
@@ -36,19 +36,18 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>-->
+        </activity>
 
         <!--TODO test-->
         <activity android:name="com.cozs.qrcode.module.zxing.CaptureFragmentActivity"
             android:exported="true"
             android:screenOrientation="portrait"
-            android:launchMode="singleTask"
-            android:theme="@style/SplashActivityStyle">
-            <intent-filter>
+            android:launchMode="singleTask">
+            <!--<intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            </intent-filter>-->
         </activity>
 
         <activity android:name="com.cozs.qrcode.module.activity.MainActivity"
